# platform.core.multimedia.audio-session-manager

./: LICENSE.APLv2  Makefile.am  audio-session-mgr.pc.in  configure  configure.ac  project.config
debian/: changelog  control  libaudiosessionmgr-0.install.in  libaudiosessionmgr-0.postinst  libaudiosessionmgr-0.preinst  rules
include/: asm-error.h  asm-log.h  audio-session-manager-types.h  audio-session-manager.h
init/: Makefile.am  Makefile.in  audiosessionmanager
packaging/: audio-session-manager.changes  audio-session-manager.service  audio-session-manager.spec
src/: audio-session-mgr-server.c  audio-session-mgr.c
test/: Makefile.am  asm_testsuite.c
